# network-config-analyzer

./: CONTRIBUTING.md  Dockerfile  Dockerfile.ubi  MAINTAINERS.md  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/actions/setup-nca-env/: action.yml
.github/workflows/: codeql-analysis.yml  make-github-and-docker-release.yml  reset-tests-expected-runtime.yml  scorecard.yml  test-push.yml  update-tests-expected-output.yml  update-tests-expected-runtime.yml
collector/: collect.py
nca/NetworkConfig/: NetworkConfig.py  NetworkConfigQuery.py  NetworkConfigQueryRunner.py  PeerContainer.py  PoliciesFinder.py  QueryOutputHandler.py  ResourcesHandler.py  TopologyObjectsFinder.py
nca/Parsers/: GenericYamlParser.py  IstioGatewayYamlParser.py  IstioServiceEntryYamlParser.py  IstioSidecarYamlParser.py  IstioVirtualServiceYamlParser.py
tekton/: README.md
tests/: k8s_cmdline_tests.yaml
tests/calico_testcases/expected_output/: global-interferes-local-print-all-pairs.json  global-interferes-local-print-all-pairs.yaml  sup-allow-and-sub-deny-not-equiv-all-peer-pairs.json  sup-allow-and-sub-deny-not-equiv-all-peer-pairs.yaml
tests/k8s_testcases/expected_output/: forbids-empty-impl-default-spec-all-examples.json  forbids-empty-impl-default-spec-all-examples.yaml  no-strong-equivalence-all-peers-pairs.json  no-strong-equivalence-all-peers-pairs.yaml  permits-a-b-not-executed.json  permits-a-b-not-executed.yaml  permits-partly-default-impl-default-spec-print-all-pairs.json  permits-partly-default-impl-default-spec-print-all-pairs.yaml
(+5 files in other folders)
