[metadata]
name = network-config-analyzer
version = file: nca/VERSION.txt
author = Ziv Nevo
author_email = nevo@il.ibm.com
description = An analyzer for Network Policies and other connectivity-configuration resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/np-guard/network-config-analyzer
project_urls =
    Bug Tracker = https://github.com/np-guard/network-config-analyzer/issues
    NP-Guard Home = https://np-guard.github.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    ghapi==1.0.6
    PyYAML==6.0.2
    greenery==4.0.0
    networkx==3.4.2
    beautifulsoup4==4.12.3
    lxml==5.3.0

python_requires = >=3.9

[options.packages.find]
include = 
    nca*
    collector*

[options.package_data]
* = VERSION.txt

[options.entry_points]
console_scripts =
    nca = nca.nca_cli:nca_main
    nca_collect = collector.collect:collect
